# node-calendar-service/server.js
@@ -91,7 +91,7 @@ let writeBlockAsync = async (height, type, dataId, dataVal, prevHash, friendlyNa
   b.id = height
   b.time = Math.trunc(Date.now() / 1000)
   b.version = 1
-  b.stackId = env.CHAINPOINT_STACK_ID
+  b.stackId = env.CHAINPOINT_BASE_URI
   b.type = type
   b.dataId = dataId
   b.dataVal = dataVal
